Wed Dec 19 21:20:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): use wcscasecmp().

Wed Dec 19 21:15:29 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fix false usage of local variable, it cannot
	  appear in fname state [ruby-core:49659] [Bug #7408]

Wed Dec 19 21:14:28 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c: return true or false. Patch by Dirkjan Bussink. [Bug #6821]

	* test/ruby/test_gc.rb: add test-case for this bug.

Wed Dec 19 21:12:49 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* marshal.c (r_entry0): don't taint classes and modules because
	  Marshal.load just returns the dumped classes and modules.
	  [Bug #7325] [ruby-core:49198]

	* test/ruby/test_marshal.rb: related test.

Tue Dec 11 19:19:33 2012  Luis Lavena <luislavena@gmail.com>

	* win32/file.c (replace_to_long_name): correct logic around wildcard
	  characters detection and ensure wide-chars are used as pattern.
	  [ruby-core:49451] [Bug #7374]

Sat Nov 17 21:45:12  Luis Lavena  <luislavena@gmail.com>

	* win32/file.c (replace_to_long_name): skip expansion for all wildcard
	  characters.
	  [ruby-core:49451] [Bug #7374]

	* test/ruby/test_file_exhaustive.rb: add more assertions to test.

Tue Dec 11 19:19:33 2012  Luis Lavena  <luislavena@gmail.com>

	* win32/file.c (replace_to_long_name): skip automatic path expansion
	  when wildcard character is used.  [ruby-core:49451] [Bug #7374]

	* test/ruby/test_file_exhaustive.rb: add a test for above.

Tue Dec 11 19:18:12 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/mkexports.rb (each_export): skip garbages generated by VS2012's
	  nmake.
	  reported and patched by Yoshida Masato at [Bug #7333] [ruby-dev:46484]

Tue Dec 11 19:15:51 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_here_document): flush string content between new
	  line and :string_embexpr.  [ruby-core:48703] [Bug #7255]

Tue Dec 11 17:53:55 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
