@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 345
+#define RUBY_PATCHLEVEL 346
 
 #define RUBY_RELEASE_DATE "2012-12-19"
 #define RUBY_RELEASE_YEAR 2012
