@@ -1,3 +1,7 @@
+Wed Dec 19 21:24:40 2012  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* io.c (argf_each_codepoint): add missing ARGF#codepoints [Bug #7438]
+
 Wed Dec 19 21:20:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* file.c (file_expand_path): use wcscasecmp().
